# gitpatch

./: Cargo.toml  README.md
.github/workflows/: checks.yml
examples/: apply.rs
src/: ast.rs  lib.rs  parser.rs
tests/: .editorconfig  parse_patch.rs  parse_samples.rs  regressions.rs
tests/samples/: git.diff
tests/wild-samples/: submodule-hex.patch
tests/wild-samples-fail/: .gitattributes  merge-conflict.patch  submodule-log.patch
