[package]
name = "gitpatch"
version = "0.7.1"
authors = ["vrmiguel <vrmiguel99@gmail.com>"]
description = "Parse patches in the unified diff format"
repository = "https://github.com/gitpatch-rs/gitpatch"
readme = "README.md"
keywords = ["patch", "diff", "parse", "nom"]
license = "MIT"
edition = "2018"

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
chrono = "0.4.19"

[dev-dependencies]
pretty_assertions = "1.0.0"
